syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.example.customer.grpc";

message ReserveCredit {

  string customerId = 1;
  double value = 2;

}

message ReserveCreditResponse {

  string response = 1;

}

service CustomerService {

  rpc reserveCredit (ReserveCredit) returns (ReserveCreditResponse);

}